Fix menu issue with Chrome for Android on Tablets
https://dl.dropboxusercontent.com/u/973007/wp_responsive_menu_android_chrome.png

--- a/style.css
+++ b/style.css
@@ -1829,6 +1829,7 @@ form div {
 	position: relative;
 	text-decoration: none;
 	text-shadow: 0 -1px 0 #000;
+	white-space: nowrap;
 }
 
 .menu a:hover {
